<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <fr.univavignon.alize.AndroidALIZEDemo.ThresholdPreference
        android:title="@string/settings_threshold_title"
        android:key="threshold"
        android:summary="@string/settings_threshold_summary" />

    <SwitchPreference
        android:disableDependentsState="true"
        android:key="save_speakers_models"
        android:summary="@string/settings_save_speakers_summary"
        android:title="@string/settings_save_speakers_title" />

    <Preference
        android:dependency='save_speakers_models'
        android:title="@string/settings_revert_speakers_title"
        android:key="reset_speakers_list"
        android:summary="@string/settings_revert_speakers_summary"/>

    <SwitchPreference
        android:title="@string/settings_fancy_demo_title"
        android:key="fancy_demo"
        android:summary="@string/settings_fancy_demo_summary" />

</PreferenceScreen>
