<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/speakerListView"
            android:layout_width="match_parent"
            android:background="@drawable/border"
            android:layout_height="0dp"
            android:layout_weight="0.525"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

    </LinearLayout>

    <TextView
        android:id="@+id/no_speakers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:text="@string/no_speakers"
        android:textColor="@color/black"/>

    <View
        android:id="@+id/centerView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="match_parent"
        android:layout_height="199dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centerView">

        <Button
            android:id="@+id/add_button"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#b2dbf2"
            android:onClick="addSpeaker"
            android:text="@string/new_speaker"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/identify_button"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#b2dbf2"
            android:onClick="identify"
            android:text="@string/identify"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/removeall_button"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="#f06944"
            android:onClick="removeAll"
            android:text="@string/remove_all"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>